# libaec

./: .gitignore  CMakeLists.txt  COPYING  ChangeLog  INSTALL  Makefile.am  Makefile.in  README  README.SZIP  README.md  THANKS  aclocal.m4  config.h.in  configure  configure.ac
config/: config.h  config.h.in  config.h.in~
include/: bit_macros.h  cip.h  libae.h
src/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  aec.c  aecd.h  aed.c  aee.c  aee.h  aee_accessors.c  aee_accessors.h  aee_mutators.c  aee_mutators.h  bdec.sh  benc.sh  cip.c  decode.c  decode.h  encode.c  encode.h  encode_accessors.c  encode_accessors.h  libae.h  libaec.h  main.c  mytest.c  pnoise.cc  sz_compat.c  szlib.h  test_decode.c  test_encode.c  test_szcomp.c  utime.c
tests/: CMakeLists.txt  Makefile.am  bdec.sh  benc.sh  check_aec.c  check_aec.h  check_buffer_sizes.c  check_code_options.c  check_long_fs.c  sampledata.sh  szcomp.sh
