SET(libaec_SRCS encode.c encode_accessors.c decode.c)
ADD_LIBRARY(aec SHARED ${libaec_SRCS})
SET_TARGET_PROPERTIES(aec PROPERTIES
  VERSION 0
  SOVERSION 0.0
  )
ADD_LIBRARY(sz SHARED sz_compat.c)
SET_TARGET_PROPERTIES(sz PROPERTIES
  VERSION 0
  SOVERSION 0.0
  )
TARGET_LINK_LIBRARIES(sz aec)

ADD_EXECUTABLE(aec_client aec.c)
SET_TARGET_PROPERTIES(aec_client PROPERTIES OUTPUT_NAME "aec")
TARGET_LINK_LIBRARIES(aec_client aec)
ADD_EXECUTABLE(utime EXCLUDE_FROM_ALL utime.c)

INSTALL(FILES libaec.h szlib.h DESTINATION include)
INSTALL(TARGETS aec sz
  RUNTIME DESTINATION bin
  LIBRARY DESTINATION lib
  ARCHIVE DESTINATION lib
  )
INSTALL(PROGRAMS ${CMAKE_CURRENT_BINARY_DIR}/aec DESTINATION bin)
