INCLUDE(GenerateExportHeader)
SET(libaec_SRCS encode.c encode_accessors.c decode.c)
ADD_LIBRARY(aec ${libaec_SRCS})
SET_TARGET_PROPERTIES(aec PROPERTIES
  VERSION 0
  SOVERSION 0.0
  )
ADD_LIBRARY(sz sz_compat.c)
SET_TARGET_PROPERTIES(sz PROPERTIES
  VERSION 0
  SOVERSION 0.0
  )

IF(WIN32)
  GENERATE_EXPORT_HEADER(aec
    BASE_NAME aec
    EXPORT_MACRO_NAME aec_EXPORT
    EXPORT_FILE_NAME aec_Export.h
    STATIC_DEFINE aec_BUILT_AS_STATIC
    )
  GENERATE_EXPORT_HEADER(sz
    BASE_NAME sz
    EXPORT_MACRO_NAME sz_EXPORT
    EXPORT_FILE_NAME sz_Export.h
    STATIC_DEFINE sz_BUILT_AS_STATIC
    )
ENDIF(WIN32)

TARGET_LINK_LIBRARIES(sz aec)

ADD_EXECUTABLE(aec_client aec.c)
SET_TARGET_PROPERTIES(aec_client PROPERTIES OUTPUT_NAME "aec")
TARGET_LINK_LIBRARIES(aec_client aec)
IF(UNIX)
  ADD_EXECUTABLE(utime EXCLUDE_FROM_ALL utime.c)
ENDIF(UNIX)

INSTALL(FILES libaec.h szlib.h DESTINATION include)
INSTALL(TARGETS aec sz
  RUNTIME DESTINATION bin
  LIBRARY DESTINATION lib
  ARCHIVE DESTINATION lib
  )
INSTALL(PROGRAMS ${CMAKE_CURRENT_BINARY_DIR}/aec DESTINATION bin)
